# hed-ontology

./: .coveragerc  .gitignore  README.md  hed1.owl  readthedocs.yml  requirements.txt  setup.cfg
.github/workflows/: codespell.yaml  create_ontology.yaml
docs/source/: RDFMappings.md  conf.py  index.rst
releases/: README.md
releases/2024-06-10/: hed-standard.owl
releases/2024-10-06/: hed.owl
releases/working/: hed.owl  hed.properties
src/: Notes.txt  hedattributes.ttl  hedinstances.ttl  hedschema.ttl  hedschema_data.ttl  test_extend_schema.py  testschema.py
src/code/: merge_ontologies.py
src/dev/: hedschema_slim.ttl  score.ttl  score_unmerged.ttl  standard_unmerged.ttl  testlib.ttl  testlib_unmerged.ttl
src/dev/json-ld-format/: score.jsonld  score_unmerged.jsonld  standard_unmerged.jsonld  testlib.jsonld  testlib_unmerged.jsonld
src/dev/jsonld_format/: hedschema_slim.json-ld  score.json-ld  score_unmerged.json-ld  standard.json-ld  testlib.json-ld  testlib_unmerged.json-ld
src/dev/owl-format/: score.owl  score_unmerged.owl  standard.owl  testlib.owl  testlib_unmerged.owl
src/dev/owlxml_format/: hedschema_slim.owl  score.owl  score_unmerged.owl  standard_unmerged.owl  testlib.owl  testlib_unmerged.owl
src/extras/: hedinstances.ttl  hedstandardInstance.ttl
src/ontology/: catalog-v001.xml  hed-edit.ofn  hed-edit.omn  hed-edit.owl  hed-merge.omn  hed-merged.omn  hed-schema.omn  hed-schema.properties  hed-schema.ttl  hed-standard-edit.omn  hed-standard-work.omn  hed-standard.omn  hedschema.omn  hedschema.ttl  temp1.omn
(+63 files in other folders)
