[metadata]
name = hedrdf
author = VisLab, Ian Callanan, Kay Robbins
author_email = Kay.Robbins@utsa.edu
description = HED expression of RDF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hed-standard/hed-rdf/
# project_urls =
bug tracker = https://github.com/hed-standard/hed-rdf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.7
install_requires =
    defusedxml
    et-xmlfile
    inflect
    jdcal
    numpy
    openpyxl
    pandas
    portalocker
    python-dateutil
    pytz
    rdflib
    semantic-version
    six


[options.packages.find]
include = src*

[options.package_data]
# include the schemas in the installed package
# hed = schema/schema_data/*.xml

[options.entry_points]
console_scripts =
#    run_remodel=hed.tools.remodeling.cli.run_remodel:main
#    run_remodel_backup=hed.tools.remodeling.cli.run_remodel_backup:main
#    run_remodel_restore=hed.tools.remodeling.cli.run_remodel_restore:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/_version.py
versionfile_build = src/_version.py
tag_prefix =
parentdir_prefix = src-
